--- a/python/test_ad.ipynb
+++ b/python/test_ad.ipynb
@@ -128,13 +128,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "z = x + y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  2.],\n",
+       "       [ 12.]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z.value()"
    ]
   },
   {
@@ -147,8 +170,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[  2.],\n",
-       "       [ 12.]])"
+       "array([[  6.],\n",
+       "       [ 35.]])"
       ]
      },
      "execution_count": 10,
@@ -157,7 +180,18 @@
     }
    ],
    "source": [
-    "z.value()"
+    "z.derivatives()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "w = x + 1"
    ]
   },
   {
@@ -170,8 +204,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[  6.],\n",
-       "       [ 35.]])"
+       "array([[ 2.],\n",
+       "       [ 4.]])"
       ]
      },
      "execution_count": 12,
@@ -180,7 +214,30 @@
     }
    ],
    "source": [
-    "z.derivatives()"
+    "w.value()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2.],\n",
+       "       [ 5.]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w.derivatives()"
    ]
   },
   {
