--- a/python/test_ad.ipynb
+++ b/python/test_ad.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "import pyad.autodiff\n",
+    "from pyad.autodiff import newAutoDiff, newAutoDiffLike, squareVector\n",
     "import numpy as np"
    ]
   },
@@ -16,11 +16,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "x = pyad.autodiff.AutoDiffVectorDynamic(np.array([1.0, 3.0]), np.array([[2.0], [5.0]]))"
+    "x = newAutoDiff(np.array([1.0, 3.0]), np.array([[2.0, 2.0]]).T)"
    ]
   },
   {
@@ -33,8 +33,7 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 1.],\n",
-       "       [ 3.]])"
+       "<pyad.autodiff.AutoDiffVectorMax73; proxy of <Swig Object of type 'AutoDiffWrapper< Eigen::Matrix< double,Eigen::Dynamic,1,0,73 >,Eigen::Dynamic,1 > *' at 0x110469600> >"
       ]
      },
      "execution_count": 3,
@@ -43,7 +42,7 @@
     }
    ],
    "source": [
-    "x.value()"
+    "x"
    ]
   },
   {
@@ -56,11 +55,34 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 2.],\n",
-       "       [ 5.]])"
+       "array([[ 1.],\n",
+       "       [ 3.]])"
       ]
      },
      "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.value()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2.],\n",
+       "       [ 2.]])"
+      ]
+     },
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,36 +93,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "y = pyad.autodiff.squareVector(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1.],\n",
-       "       [ 9.]])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y.value()"
+    "y = newAutoDiffLike(x, [5., 6.])"
    ]
   },
   {
@@ -113,8 +112,7 @@
     {
      "data": {
       "text/plain": [
-       "array([[  4.],\n",
-       "       [ 30.]])"
+       "<pyad.autodiff.AutoDiffVectorMax73; proxy of <Swig Object of type 'AutoDiffWrapper< Eigen::Matrix< double,Eigen::Dynamic,1,0,73 >,Eigen::Dynamic,1 > *' at 0x110469810> >"
       ]
      },
      "execution_count": 7,
@@ -123,14 +121,14 @@
     }
    ],
    "source": [
-    "y.derivatives()"
+    "y"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -145,76 +143,47 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[  2.],\n",
-       "       [ 12.]])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 6.]\n",
+      " [ 9.]]\n"
+     ]
     }
    ],
    "source": [
-    "z.value()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  6.],\n",
-       "       [ 35.]])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "z.derivatives()"
+    "print z.value()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2.]\n",
+      " [ 2.]]\n"
+     ]
+    }
+   ],
    "source": [
-    "w = x + 1"
+    "print z.derivatives()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 2.],\n",
-       "       [ 4.]])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "w.value()"
+    "w = squareVector(x)"
    ]
   },
   {
@@ -225,17 +194,282 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.]\n",
+      " [ 9.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print w.value()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  4.]\n",
+      " [ 12.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print w.derivatives()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "big = newAutoDiff(np.random.rand(75,1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
      "data": {
       "text/plain": [
-       "array([[ 2.],\n",
-       "       [ 5.]])"
+       "<pyad.autodiff.AutoDiffVectorDynamic; proxy of <Swig Object of type 'AutoDiffWrapper< Eigen::VectorXd,Eigen::Dynamic,1 > *' at 0x110497150> >"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "big"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 0.,  1.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  1., ...,  0.,  0.,  0.],\n",
+       "       ..., \n",
+       "       [ 0.,  0.,  0., ...,  1.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., ...,  0.,  1.,  0.],\n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  1.]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "big.derivatives()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.allclose((big + 2.0).value(), big.value() + 2.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.allclose((big + 2.0).derivatives(), big.derivatives())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.allclose((big * 2.0).derivatives(), 2.0 * big.derivatives())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "x.value()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "x.derivatives()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "y = pyad.autodiff.squareVector(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "y.value()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "y.derivatives()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "z = x + y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "z.value()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "z.derivatives()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "w = x + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "w.value()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "w.derivatives()"
    ]
